--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Encoding: UTF-8
-Imports:
+Depends:
  readr, readxl, dplyr, stringr, tibble
 LazyData: true
 RoxygenNote: 6.1.0.9000
