--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,6 @@ Description: Paquete para cargar codigueras, contiene codigueras de
 License: What license is it under?
 Encoding: UTF-8
 Depends:
- readr, readxl, dplyr, stringr, tibble
+ readr, readxl, dplyr, stringr, tibble, janitor
 LazyData: true
 RoxygenNote: 6.1.0.9000
